<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="account_data">ACCOUNT DATA</string>
    <string name="add_item">Add Item</string>
    <string name="additional_details">Additional details</string>
    <string name="address">Address</string>
    <string name="all_data_reset">ALL DATA HAS BEEN RESET</string>
    <string name="all_text">ALL</string>
    <string name="amount">Amount</string>
    <string name="invoices">Invoices</string>
    <string name="invoice">Invoice</string>
    <string name="invoice_history_text">HISTORY</string>
    <string name="invoice_text">Invoice</string>
    <string name="invoice_total">Invoice total</string>
    <string name="discard_changes_message">Are you sure you want to go back? Any data entered will be lost!</string>
    <string name="want_to_erase_all_the_data">Do you want to erase all the data!</string>
    <string name="want_to_remove_this_item">\"Are you sure you want to remove this item from invoice? \"</string>

    <string name="change_pin_message">PIN may only be changed when the PIN lock feature is ON</string>
    <string name="app_name">Invoice Maker</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="backup">Backup</string>
    <string name="backup_created">Backup is created to Invoice Folder</string>
    <string name="balance_due">Balance Due</string>
    <string name="bank_transfer">Bank transfer</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="business_details">Business details</string>
    <string name="business_logo">Business Logo</string>
    <string name="business_text">BUSINESS</string>
    <string name="cancel">Cancel</string>
    <string name="cannot_empty">Cannot be empty</string>
    <string name="change_pin">Change PIN</string>
    <string name="choose_client_first">Please choose a client first</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="choose_logo">Select a Logo</string>
    <string name="clear">Clear</string>
    <string name="click_here_if_keyboard_does_not_show">Click here if keyboard does not show</string>
    <string name="clients">Clients</string>
    <string name="clients_text">Clients</string>
    <string name="closed_estimate_message">Estimates that have been converted to an invoice will show up here</string>
    <string name="closed_text">CLOSED</string>
    <string name="currency_name_text">Currency</string>
    <string name="currency_value_text">USD ($)</string>
    <string name="date">Date</string>
    <string name="date_name_text">Date format</string>
    <string name="date_value_text">----/--/--</string>
    <string name="del">Del</string>
    <string name="delete_logo">Delete Logo</string>
    <string name="delete_text">Delete</string>
    <string name="denied_permission">You have denied this permission.</string>
    <string name="description">Description</string>
    <string name="developer_id">8755343418623796542</string>
    <string name="discount">Discount</string>
    <string name="due_on_receipt">Due on receipt</string>
    <string name="edit_invoice_text">EDIT</string>
    <string name="edit_item">Edit Item</string>
    <string name="email">Email</string>
    <string name="email_id">toolapps2022@gmail.com</string>
    <string name="enter_a_passcode">Enter A Passcode</string>
    <string name="estimate">Estimate</string>
    <string name="estimates_text">Estimates</string>
    <string name="exit">Exit</string>
    <string name="exit_confirmation">Exit Application?</string>
    <string name="export">Export</string>
    <string name="fax">Fax</string>
    <string name="feedback">Feedback</string>
    <string name="fob">FOB</string>
    <string name="gallery">Gallery</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="import_from_contact">Import from contact</string>

    <string name="locale">LOCALE</string>
    <string name="logo_text">Logo</string>
    <string name="make_checks_payable_to">Make checks payable to</string>
    <string name="make_invoice_text">Make Invoice</string>
    <string name="mark_paid_text">Mark paid</string>
    <string name="mobile">Mobile</string>
    <string name="more">More app</string>

    <string name="my_items">Items</string>
    <string name="name">Name</string>
    <string name="new_item">New Item</string>
    <string name="no">No</string>
    <string name="no_client">No client</string>
    <string name="no_client_message">You can create new clients here or import from your contacts.</string>
    <string name="no_estimate_message">Show clients the costs by making an estimate, later you can convert it to an invoice</string>
    <string name="no_files_or_directories">No files or directories are found.</string>
    <string name="no_invoice_message">Your invoices will show up here. \10Click the plus button below to create your first invoice!</string>
    <string name="no_item_message">Here you can manage a list of products or services that you repeatedly invoice for.</string>
    <string name="notes">Notes</string>
    <string name="ok">OK</string>
    <string name="open_estimate_message">Estimates that haven\'t been converted to an invoice will show up here</string>
    <string name="open_in">Open in…</string>
    <string name="open_text">OPEN</string>
    <string name="other_details">Other Details</string>
    <string name="outstanding_text">UNPAID</string>
    <string name="paid">Paid</string>
    <string name="paid_invoice_message">Invoices that you mark paid will show up here.</string>
    <string name="paid_text">PAID</string>
    <string name="payment_option">Payment options</string>
    <string name="payment_options">Payment options (Bank transfer, PayPal, etc)</string>
    <string name="payments">Payments</string>
    <string name="paypal_address">Paypal address</string>
    <string name="paypal_error_message">Please enter a valid email for PayPal</string>
    <string name="permission_storage">you need storage permission</string>
    <string name="phone">Phone</string>
    <string name="pin_lock">Pin Lock</string>
    <string name="policy">Privacy Policy</string>
    <string name="preview">Preview</string>
    <string name="print_text">Print</string>
    <string name="privacy_policy_link">https://revelsolutions.xyz/Application/PrivacyPolicyInvoiceMaker.html</string>
    <string name="privacy_security">PRIVACY AND SECURITY</string>
    <string name="processing">Processing...</string>
    <string name="quantity">Quantity</string>
    <string name="rateus">Rate us</string>
    <string name="remove_item">Remove item</string>
    <string name="reports_text">Reports</string>
    <string name="reset">Reset</string>
    <string name="restore">Restore</string>
    <string name="save">SAVE</string>
    <string name="search">search</string>
    <string name="search_menu_title">Search</string>
    <string name="settings_text">Settings</string>
    <string name="share">Share</string>
    <string name="share_app">Share App</string>
    <string name="share_text">Share</string>
    <string name="ship_date">Ship Date</string>
    <string name="ship_via">Ship Via</string>
    <string name="shipping">Shipping</string>
    <string name="shipping_information">SHIPPING INFORMATION</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="subtotal">Subtotal</string>
    <string name="take_photo">Take photo</string>
    <string name="tax">Tax</string>
    <string name="taxable">Taxable</string>
    <string name="taxes">Taxes</string>
    <string name="to">To:</string>
    <string name="total">Total</string>
    <string name="tracking_number">Tracking Number</string>
    <string name="unit_cost">Unit cost</string>
    <string name="unpaid_invoice_message">Invoices that are not yet paid show up here.</string>

    <string name="yes">Yes</string>

</resources>