<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textSize="18sp" android:textStyle="bold" android:textColor="@android:color/black" android:gravity="center" android:id="@+id/title" android:background="?attr/selectableItemBackground" android:paddingTop="@dimen/margin_15" android:paddingBottom="@dimen/margin_15" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/take_photo" android:paddingStart="@dimen/margin_20"/>
    <TextView android:textSize="@dimen/text_size_16" android:id="@+id/message" android:background="?attr/selectableItemBackground" android:padding="@dimen/margin_10" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="Gallery ewhfiuawlhuirwehgilrewhtiurewhtiruwethrilewtuhrewlituhreiwuth" android:maxLines="2"/>
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_10">
        <TextView android:textSize="@dimen/text_size_16" android:textColor="@color/colorPrimary" android:gravity="center" android:id="@+id/cancel" android:background="@drawable/bg_border" android:padding="@dimen/margin_10" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_5" android:layout_marginRight="@dimen/margin_5" android:text="@string/cancel" android:layout_weight="1"/>
        <TextView android:textSize="@dimen/text_size_16" android:textColor="@color/white" android:gravity="center" android:id="@+id/ok" android:background="@drawable/bg_border" android:paddingLeft="@dimen/margin_20" android:paddingTop="@dimen/margin_10" android:paddingRight="@dimen/margin_20" android:paddingBottom="@dimen/margin_10" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_5" android:layout_marginRight="@dimen/margin_5" android:text="@string/ok" android:layout_weight="1" android:backgroundTint="@color/colorPrimaryDark"/>
    </LinearLayout>
</LinearLayout>
