<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        app:theme="@style/ToolbarColoredBackArrow"
        app:titleTextColor="@color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="0.5dp"
            android:background="@drawable/main_bg"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/margin_20"
                android:paddingTop="@dimen/margin_15"
                android:paddingBottom="@dimen/margin_5"
                android:text="@string/business_text"
                android:textColor="@color/blue"
                android:textSize="@dimen/text_size_16"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_10"
                android:layout_marginLeft="@dimen/margin_10"
                android:layout_marginRight="@dimen/margin_10"
                app:cardCornerRadius="10dp">

                <TextView
                    android:id="@+id/select_logo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:paddingStart="@dimen/margin_10"
                    android:paddingTop="@dimen/margin_15"
                    android:paddingBottom="@dimen/margin_15"
                    android:text="@string/logo_text"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_16" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_5"
                android:layout_marginLeft="@dimen/margin_5"
                android:layout_marginRight="@dimen/margin_5"
                app:cardCornerRadius="10dp"
                app:cardUseCompatPadding="true">

                <TextView
                    android:id="@+id/business_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:paddingStart="@dimen/margin_10"
                    android:paddingTop="@dimen/margin_15"
                    android:paddingBottom="@dimen/margin_15"
                    android:text="@string/business_details"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_16" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_10"
                android:layout_marginLeft="@dimen/margin_10"
                android:layout_marginRight="@dimen/margin_10"
                app:cardCornerRadius="10dp">

                <TextView
                    android:id="@+id/payment_options"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:paddingStart="@dimen/margin_10"
                    android:paddingTop="@dimen/margin_15"
                    android:paddingBottom="@dimen/margin_15"
                    android:text="@string/payment_options"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_16" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/margin_20"
                android:paddingTop="@dimen/margin_15"
                android:paddingBottom="@dimen/margin_5"
                android:text="@string/locale"
                android:textColor="@color/blue"
                android:textSize="@dimen/text_size_16"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_10"
                android:layout_marginLeft="@dimen/margin_10"
                android:layout_marginRight="@dimen/margin_10"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:id="@+id/currency_format_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:id="@+id/currency_format_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:paddingLeft="@dimen/margin_10"
                        android:paddingTop="@dimen/margin_15"
                        android:paddingBottom="@dimen/margin_15"
                        android:text="@string/currency_name_text"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_16" />

                    <TextView
                        android:id="@+id/currency_format_value"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="right"
                        android:paddingTop="@dimen/margin_15"
                        android:paddingRight="@dimen/margin_10"
                        android:paddingBottom="@dimen/margin_15"
                        android:text="@string/currency_value_text"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_16" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_5"
                android:layout_marginLeft="@dimen/margin_5"
                android:layout_marginRight="@dimen/margin_5"
                app:cardCornerRadius="10dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:id="@+id/date_format_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:id="@+id/date_format_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:paddingLeft="@dimen/margin_10"
                        android:paddingTop="@dimen/margin_15"
                        android:paddingBottom="@dimen/margin_15"
                        android:text="@string/date_name_text"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_16" />

                    <TextView
                        android:id="@+id/date_format_value"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="right"
                        android:paddingTop="@dimen/margin_15"
                        android:paddingRight="@dimen/margin_10"
                        android:paddingBottom="@dimen/margin_15"
                        android:text="@string/date_value_text"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_16" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/margin_20"
                android:paddingTop="@dimen/margin_15"
                android:paddingBottom="@dimen/margin_5"
                android:text="@string/account_data"
                android:textColor="@color/blue"
                android:textSize="@dimen/text_size_16"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_10"
                android:layout_marginLeft="@dimen/margin_10"
                android:layout_marginRight="@dimen/margin_10"
                app:cardCornerRadius="10dp">

                <TextView
                    android:id="@+id/backup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:paddingStart="@dimen/margin_10"
                    android:paddingTop="@dimen/margin_15"
                    android:paddingBottom="@dimen/margin_15"
                    android:text="@string/backup"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_16" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_5"
                android:layout_marginLeft="@dimen/margin_5"
                android:layout_marginRight="@dimen/margin_5"
                app:cardCornerRadius="10dp"
                app:cardUseCompatPadding="true">

                <TextView
                    android:id="@+id/restore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:paddingLeft="@dimen/margin_10"
                    android:paddingTop="@dimen/margin_15"
                    android:paddingBottom="@dimen/margin_15"
                    android:text="@string/restore"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_16" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_10"
                android:layout_marginLeft="@dimen/margin_10"
                android:layout_marginRight="@dimen/margin_10"
                android:visibility="gone"
                app:cardCornerRadius="10dp">

                <TextView
                    android:id="@+id/export"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:paddingStart="@dimen/margin_10"
                    android:paddingTop="@dimen/margin_15"
                    android:paddingBottom="@dimen/margin_15"
                    android:text="@string/export"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_16" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_10"
                android:layout_marginLeft="@dimen/margin_10"
                android:layout_marginRight="@dimen/margin_10"
                android:layout_marginBottom="@dimen/margin_5"
                app:cardCornerRadius="10dp">

                <TextView
                    android:id="@+id/reset"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:paddingStart="@dimen/margin_10"
                    android:paddingTop="@dimen/margin_15"
                    android:paddingBottom="@dimen/margin_15"
                    android:text="@string/reset"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_16" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/margin_20"
                android:paddingTop="@dimen/margin_15"
                android:paddingBottom="@dimen/margin_5"
                android:text="@string/privacy_security"
                android:textColor="@color/blue"
                android:visibility="gone" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_10"
                android:layout_marginRight="@dimen/margin_10"
                android:visibility="gone"
                app:cardCornerRadius="10dp">

                <RelativeLayout
                    android:id="@+id/pin_lock_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/margin_10"
                    android:paddingTop="@dimen/margin_10"
                    android:paddingRight="@dimen/margin_10"
                    android:paddingBottom="@dimen/margin_10">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:text="@string/pin_lock"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_16" />

                    <Switch
                        android:id="@+id/pin_lock_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:clickable="false"
                        android:theme="@style/ThemeOverlay_MySwitchCompat" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_10"
                android:layout_marginTop="@dimen/margin_3"
                android:layout_marginRight="@dimen/margin_10"
                android:visibility="gone"
                app:cardCornerRadius="10dp">

                <TextView
                    android:id="@+id/change_pin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:paddingStart="@dimen/margin_10"
                    android:paddingTop="@dimen/margin_15"
                    android:paddingBottom="@dimen/margin_15"
                    android:text="@string/change_pin"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size_16" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
