<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@android:drawable/toast_frame"
    android:orientation="vertical">

    <TextView
        android:id="@+id/take_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end"
        android:background="?attr/selectableItemBackground"
        android:drawableEnd="@drawable/ic_photo_camera"
        android:paddingStart="@dimen/margin_20"
        android:paddingTop="@dimen/margin_15"
        android:paddingEnd="@dimen/margin_10"
        android:paddingBottom="@dimen/margin_15"
        android:text="@string/take_photo"
        android:textColor="@color/toolbar_text"
        android:textSize="16sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/gallery_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end"
        android:background="?attr/selectableItemBackground"
        android:paddingStart="@dimen/margin_20"
        android:paddingTop="@dimen/margin_15"
        android:paddingBottom="@dimen/margin_15"
        android:text="@string/gallery"
        android:textColor="@color/toolbar_text"
        android:textSize="16sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/browse_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="?attr/selectableItemBackground"
        android:drawableTop="@drawable/ic_add_photo"
        android:drawablePadding="@dimen/margin_10"
        android:gravity="center"
        android:paddingStart="@dimen/margin_20"
        android:paddingTop="@dimen/margin_15"
        android:paddingEnd="@dimen/margin_10"
        android:paddingBottom="@dimen/margin_10"
        android:text="@string/choose_from_gallery"
        android:textColor="@color/toolbar_text"
        android:textSize="24sp"
        android:textStyle="bold" />
</LinearLayout>
